fixed overlapping class names

--- a/styles/main.css
+++ b/styles/main.css
@@ -1168,7 +1168,7 @@ progress::-webkit-progress-value {
   margin-left: 1rem;
 }
 
-.back-button {
+.shop-back-button {
   width: 2rem;
   height: 2rem;
   border: none;
